==> polybassa/elua/src/platform/stm32/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "uip_arp.h"
#include "elua_uip.h"
#include "elua_adc.h"
#include "uip-conf.h"
#include "platform_conf.h"
#include "diskio.h"
#include "common.h"
#include "buf.h"
#include "utils.h"
#include "lua.h"
#include "lauxlib.h"
#include "lrotable.h"
#include "stm32f10x.h"
#define HCLK        ( HSE_Value * 9 )
#define PCLK1_DIV   2
#define PCLK2_DIV   1
#define SYSTICKHZ               10
#define SYSTICKMS               (1000 / SYSTICKHZ)

int platform_init()
{
	// Set the clocking to run from PLL
	RCC_Configuration();

	// Setup IRQ's
	NVIC_Configuration();

	// Setup PIO
	pios_init();

	// Setup UARTs
	uarts_init();

	// Setup timers
	timers_init();

	// Setup CANs
	cans_init();

	// Setup system timer
	cmn_systimer_set_base_freq( HCLK );
	cmn_systimer_set_interrupt_freq( SYSTICKHZ );

	// Enable SysTick
	if ( SysTick_Config( HCLK / SYSTICKHZ ) )
	{ 
		/* Capture error */ 
		while (1);
	}

	// Flash initialization (for WOFS)
	FLASH_Unlock();

	cmn_platform_init();

	// Setup Default GPIOs
	seco_gpios_init();

	// All done
	return PLATFORM_OK;
}

static void pios_init()
{
	GPIO_InitTypeDef GPIO_InitStructure;
	int port;

	for( port = 0; port < NUM_PIO; port++ )
	{
		// Enable clock to port.
		RCC_APB2PeriphClockCmd(pio_port_clk[port], ENABLE);

		// Default all port pins to input and enable port.
		GPIO_InitStructure.GPIO_Pin  = GPIO_Pin_All;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;

		GPIO_Init(pio_port[port], &GPIO_InitStructure);
	}
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
	pio_type retval = 1;
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_TypeDef * base = pio_port[ port ];

	switch( op )
	{
		case PLATFORM_IO_PORT_SET_VALUE:
			GPIO_Write(base, pinmask);
			break;

		case PLATFORM_IO_PIN_SET:
			GPIO_SetBits(base, pinmask);
			break;

		case PLATFORM_IO_PIN_CLEAR:
			GPIO_ResetBits(base, pinmask);
			break;

		case PLATFORM_IO_PORT_DIR_INPUT:
			pinmask = GPIO_Pin_All;
		case PLATFORM_IO_PIN_DIR_INPUT:
			GPIO_InitStructure.GPIO_Pin  = pinmask;
			GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;

			GPIO_Init(base, &GPIO_InitStructure);
			break;

		case PLATFORM_IO_PORT_DIR_OUTPUT:
			pinmask = GPIO_Pin_All;
		case PLATFORM_IO_PIN_DIR_OUTPUT:
			GPIO_InitStructure.GPIO_Pin   = pinmask;
			GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_Out_PP;
			GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

			GPIO_Init(base, &GPIO_InitStructure);
			break;

		case PLATFORM_IO_PORT_GET_VALUE:
			retval = pinmask == PLATFORM_IO_READ_IN_MASK ? GPIO_ReadInputData(base) : GPIO_ReadOutputData(base);
			break;

		case PLATFORM_IO_PIN_GET:
			retval = GPIO_ReadInputDataBit(base, pinmask);
			break;

		case PLATFORM_IO_PIN_PULLUP:
			GPIO_InitStructure.GPIO_Pin   = pinmask;
			GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPU;

			GPIO_Init(base, &GPIO_InitStructure);
			break;

		case PLATFORM_IO_PIN_PULLDOWN:
			GPIO_InitStructure.GPIO_Pin   = pinmask;
			GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IPD;

			GPIO_Init(base, &GPIO_InitStructure);
			break;

		case PLATFORM_IO_PIN_NOPULL:
			GPIO_InitStructure.GPIO_Pin   = pinmask;
			GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_IN_FLOATING;

			GPIO_Init(base, &GPIO_InitStructure);
			break;

		default:
			retval = 0;
			break;
	}
	return retval;
}

void cans_init( void )
{
	// Remap CAN to PB8/9
//	GPIO_PinRemapConfig( GPIO_Remap1_CAN1, ENABLE );

	// CAN Periph clock enable
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_CAN1, ENABLE);
}

u32 platform_can_setup( unsigned id, u32 clock )
{
	CAN_InitTypeDef        CAN_InitStructure;
	CAN_FilterInitTypeDef  CAN_FilterInitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;
	int cbaudidx = -1;

	// Configure IO Pins -- This is for STM32F103RE
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
	GPIO_Init( GPIOA, &GPIO_InitStructure );

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init( GPIOA, &GPIO_InitStructure );

	// Select baud rate up to requested rate, except for below min, where min is selected
	if ( clock >= can_baud_rate[ CAN_BAUD_COUNT - 1 ] ) // round down to peak rate if >= peak rate
		cbaudidx = CAN_BAUD_COUNT - 1;
	else
	{
		for( cbaudidx = 0; cbaudidx < CAN_BAUD_COUNT - 1; cbaudidx ++ )
		{
			if( clock < can_baud_rate[ cbaudidx + 1 ] ) // take current idx if next is too large
				break;
		}
	}

	/* Deinitialize CAN Peripheral */
	CAN_DeInit( CAN1 );
	CAN_StructInit( &CAN_InitStructure );

	/* CAN cell init */
	CAN_InitStructure.CAN_TTCM=DISABLE;
	CAN_InitStructure.CAN_ABOM=DISABLE;
	CAN_InitStructure.CAN_AWUM=DISABLE;
	CAN_InitStructure.CAN_NART=DISABLE;
	CAN_InitStructure.CAN_RFLM=DISABLE;
	CAN_InitStructure.CAN_TXFP=DISABLE;
	CAN_InitStructure.CAN_Mode=CAN_Mode_Normal;
	CAN_InitStructure.CAN_SJW=can_baud_sjw[ cbaudidx ];
	CAN_InitStructure.CAN_BS1=can_baud_bs1[ cbaudidx ];
	CAN_InitStructure.CAN_BS2=can_baud_bs2[ cbaudidx ];
	CAN_InitStructure.CAN_Prescaler=can_baud_pre[ cbaudidx ];
	CAN_Init( CAN1, &CAN_InitStructure );

	/* CAN filter init */
	CAN_FilterInitStructure.CAN_FilterNumber=0;
	CAN_FilterInitStructure.CAN_FilterMode=CAN_FilterMode_IdMask;
	CAN_FilterInitStructure.CAN_FilterScale=CAN_FilterScale_32bit;
	CAN_FilterInitStructure.CAN_FilterIdHigh=0x0000;
	CAN_FilterInitStructure.CAN_FilterIdLow=0x0000;
	CAN_FilterInitStructure.CAN_FilterMaskIdHigh=0x0000;
	CAN_FilterInitStructure.CAN_FilterMaskIdLow=0x0000;
	CAN_FilterInitStructure.CAN_FilterFIFOAssignment=CAN_FIFO0;
	CAN_FilterInitStructure.CAN_FilterActivation=ENABLE;
	CAN_FilterInit(&CAN_FilterInitStructure);

	return can_baud_rate[ cbaudidx ];
}

int platform_can_send( unsigned id, u32 canid, u8 idtype, u8 len, const u8 *data )
{
	CanTxMsg TxMessage;
	const char *s = ( char * )data;
	char *d;

	switch( idtype )
	{
		case ELUA_CAN_ID_STD:
			TxMessage.IDE = CAN_ID_STD;
			TxMessage.StdId = canid;
			break;
		case ELUA_CAN_ID_EXT:
			TxMessage.IDE = CAN_ID_EXT;
			TxMessage.ExtId = canid;
			break;
	}

	TxMessage.RTR=CAN_RTR_DATA;
	TxMessage.DLC=len;

	d = ( char * )TxMessage.Data;
	DUFF_DEVICE_8( len,  *d++ = *s++ );

	if( CAN_Transmit( CAN1, &TxMessage ) == CAN_NO_MB )
		return PLATFORM_ERR;

	return PLATFORM_OK;
}

int platform_can_recv( unsigned id, u32 *canid, u8 *idtype, u8 *len, u8 *data )
{
	CanRxMsg RxMessage;
	const char *s;
	char *d;

	if( CAN_MessagePending( CAN1, CAN_FIFO0 ) > 0 )
	{
		CAN_Receive(CAN1, CAN_FIFO0, &RxMessage);

		if( RxMessage.IDE == CAN_ID_STD )
		{
			*canid = ( u32 )RxMessage.StdId;
			*idtype = ELUA_CAN_ID_STD;
		}
		else
		{
			*canid = ( u32 )RxMessage.ExtId;
			*idtype = ELUA_CAN_ID_EXT;
		}

		*len = RxMessage.DLC;

		s = ( const char * )RxMessage.Data;
		d = ( char* )data;
		DUFF_DEVICE_8( RxMessage.DLC,  *d++ = *s++ );
		return PLATFORM_OK;
	}
	else
		return PLATFORM_UNDERFLOW;
}

static void uarts_init()
{
	// Enable clocks.
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART4, ENABLE);
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_UART5, ENABLE);
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
	USART_InitTypeDef USART_InitStructure;

	USART_InitStructure.USART_BaudRate = baud;

	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

	switch( databits )
	{
		case 5:
		case 6:
		case 7:
		case 8:
			USART_InitStructure.USART_WordLength = USART_WordLength_8b;
			break;
		case 9:
			USART_InitStructure.USART_WordLength = USART_WordLength_9b;
			break;
		default:
			USART_InitStructure.USART_WordLength = USART_WordLength_8b;
			break;
	}

	switch (stopbits)
	{
		case PLATFORM_UART_STOPBITS_1:
			USART_InitStructure.USART_StopBits = USART_StopBits_1;
			break;
		case PLATFORM_UART_STOPBITS_2:
			USART_InitStructure.USART_StopBits = USART_StopBits_2;
			break;
		default:
			USART_InitStructure.USART_StopBits = USART_StopBits_2;
			break;
	}

	switch (parity)
	{
		case PLATFORM_UART_PARITY_EVEN:
			USART_InitStructure.USART_Parity = USART_Parity_Even;
			break;
		case PLATFORM_UART_PARITY_ODD:
			USART_InitStructure.USART_Parity = USART_Parity_Odd;
			break;
		default:
			USART_InitStructure.USART_Parity = USART_Parity_No;
			break;
	}

	usart_init(id, &USART_InitStructure);

	return TRUE;
}

void platform_s_uart_send( unsigned id, u8 data )
{
	while(USART_GetFlagStatus(stm32_usart[id], USART_FLAG_TXE) == RESET)
	{
	}
	USART_SendData(stm32_usart[id], data);
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
	if( timeout == 0 )
	{
		if (USART_GetFlagStatus(stm32_usart[id], USART_FLAG_RXNE) == RESET)
			return -1;
		else
			return USART_ReceiveData(stm32_usart[id]);
	}
	// Receive char blocking
	while(USART_GetFlagStatus(stm32_usart[id], USART_FLAG_RXNE) == RESET);
	return USART_ReceiveData(stm32_usart[id]);
}

static void timers_init()
{
	unsigned i;

	// Enable clocks.
	RCC_APB2PeriphClockCmd( RCC_APB2Periph_TIM1, ENABLE );  
	RCC_APB1PeriphClockCmd( RCC_APB1Periph_TIM2, ENABLE );
	RCC_APB1PeriphClockCmd( RCC_APB1Periph_TIM3, ENABLE );
	RCC_APB1PeriphClockCmd( RCC_APB1Periph_TIM4, ENABLE );
	RCC_APB1PeriphClockCmd( RCC_APB1Periph_TIM5, ENABLE );

	// Configure timers
	for( i = 0; i < NUM_TIMER; i ++ )
		platform_timer_set_clock( i, TIM_STARTUP_CLOCK );
}

void platform_s_timer_delay( unsigned id, timer_data_type delay_us )
{
	TIM_TypeDef *ptimer = timer[ id ];
	volatile unsigned dummy;
	timer_data_type final;

	final = ( ( u64 )delay_us * platform_timer_get_clock( id ) ) / 1000000;
	TIM_SetCounter( ptimer, 0 );
	for( dummy = 0; dummy < 200; dummy ++ );
	while( TIM_GetCounter( ptimer ) < final );
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
	u32 res = 0;
	TIM_TypeDef *ptimer = timer[ id ];
	volatile unsigned dummy;

	data = data;
	switch( op )
	{
		case PLATFORM_TIMER_OP_START:
			TIM_SetCounter( ptimer, 0 );
			for( dummy = 0; dummy < 200; dummy ++ );
			break;

		case PLATFORM_TIMER_OP_READ:
			res = TIM_GetCounter( ptimer );
			break;

		case PLATFORM_TIMER_OP_SET_CLOCK:
			res = platform_timer_set_clock( id, data );
			break;

		case PLATFORM_TIMER_OP_GET_CLOCK:
			res = platform_timer_get_clock( id );
			break;

		case PLATFORM_TIMER_OP_GET_MAX_CNT:
			res = 0xFFFF;
			break;
	}
	return res;
}

int platform_s_timer_set_match_int( unsigned id, timer_data_type period_us, int type )
{
	TIM_TypeDef* base = ( TIM_TypeDef* )timer[ id ];
	u32 period, prescaler, freq;
	u64 final;
	TIM_OCInitTypeDef  TIM_OCInitStructure;

	if( period_us == 0 )
	{
		TIM_ITConfig( base, TIM_IT_CC1, DISABLE );
		base->CR1 = 0; // Why are we doing this?
		base->CR2 = 0;
		return PLATFORM_TIMER_INT_OK;
	}

	period = ( ( u64 )TIM_GET_BASE_CLK( id ) * period_us ) / 1000000;

	prescaler = ( period / 0x10000 ) + 1;
	period /= prescaler;

	platform_timer_set_clock( id, TIM_GET_BASE_CLK( id  ) / prescaler );
	freq = platform_timer_get_clock( id );
	final = ( ( u64 )period_us * freq ) / 1000000;

	if( final == 0 )
		return PLATFORM_TIMER_INT_TOO_SHORT;
	if( final > 0xFFFF )
		return PLATFORM_TIMER_INT_TOO_LONG;

	TIM_Cmd( base, DISABLE );

	TIM_OCStructInit( &TIM_OCInitStructure );
	TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
	TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	TIM_OCInitStructure.TIM_Pulse = ( u16 )final;
	TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
	TIM_OC1Init( base, &TIM_OCInitStructure );

	// Patch timer configuration to reload when period is reached
	TIM_SetAutoreload( base, ( u16 )final );

	TIM_OC1PreloadConfig( base, TIM_OCPreload_Enable );

	stm32_timer_int_periodic_flag[ id ] = type;

	TIM_SetCounter( base, 0 );
	TIM_Cmd( base, ENABLE );
	//TIM_ITConfig( base, TIM_IT_CC1, ENABLE );

	return PLATFORM_TIMER_INT_OK;
}

u64 platform_timer_sys_raw_read()
{
	return SysTick->LOAD - SysTick->VAL;
}
